--- a/project/backend/pubspec.yaml
+++ b/project/backend/pubspec.yaml
@@ -11,7 +11,9 @@ dependencies:
   args: ^2.3.0
   common:
     path: ../common
+  hasura_connect: ^4.0.0+4
   shelf: ^1.4.0
+  shelf_modular: ^2.1.0
   shelf_router: ^1.1.0
 
 dev_dependencies:
